[gd_scene load_steps=33 format=2]

[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/botao_olho_entrar.png" type="Texture" id=6]
[ext_resource path="res://assets/espinhos.png" type="Texture" id=7]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://niveis/cordel1/cordel1-nivel2/nivel2-c1n2.gd" type="Script" id=9]
[ext_resource path="res://assets/botao_menu.png.png" type="Texture" id=10]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=11]
[ext_resource path="res://assets/tela_comando.png" type="Texture" id=12]
[ext_resource path="res://assets/placa.png" type="Texture" id=13]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=14]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=15]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=16]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=17]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=18]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=19]
[ext_resource path="res://niveis/cordel1/cordel1-nivel2/cartas-c1n2.gd" type="Script" id=20]
[ext_resource path="res://niveis/cordel1/cordel1-nivel2/instrucoes-c1n2.gd" type="Script" id=21]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39, 38.25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 62, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 62, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 128, 62, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 192, 62, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 0, 256, 62, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 0, 320, 62, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 8 )

[node name="nivel2" type="Node2D"]
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 11 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 380, -221 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 15 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -220 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 16 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 380, -74 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 15 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, -74 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 16 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 380, 72 )
scale = Vector2( 2.381, 2 )
texture = ExtResource( 15 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 380.3, 72 )
scale = Vector2( 2.37593, 2 )
texture = ExtResource( 16 )

[node name="Dash" parent="." instance=ExtResource( 4 )]

[node name="cartas" type="Node" parent="."]
script = ExtResource( 20 )

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 87.0
margin_top = 193.0
margin_right = 119.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="numero" type="Label" parent="cartas/carta1"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="carta2" type="TextureButton" parent="cartas"]
margin_left = 159.0
margin_top = 193.0
margin_right = 191.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="numero" type="Label" parent="cartas/carta2"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="carta3" type="TextureButton" parent="cartas"]
margin_left = 230.0
margin_top = 193.0
margin_right = 262.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="numero" type="Label" parent="cartas/carta3"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 21 )

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botao_lixeira" type="TextureButton" parent="botoes"]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 5 )]
margin_left = 3.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 65.0
rect_scale = Vector2( 1, 1 )
texture_normal = ExtResource( 10 )
script = null
__meta__ = {
"_edit_use_anchors_": true
}

[node name="botao_olho" type="TextureButton" parent="botoes"]
margin_left = 346.0
margin_top = 16.0
margin_right = 386.0
margin_bottom = 56.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 128, 136 )
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 3 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 185, 136 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
scale = Vector2( 6, 5 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 3 )

[node name="espinhos" type="AnimatedSprite" parent="pisos/piso_centro"]
position = Vector2( 0, -88 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 10 )
speed_scale = 3.0

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 243, 136 )
scale = Vector2( 0.5, 0.5 )

[node name="placa" type="Sprite" parent="pisos/piso_direita"]
position = Vector2( -10, -82 )
scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 3 )

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 3 )]
visible = false
nivelRestart = "res://niveis/cordel1/cordel1-nivel2/nivel2.tscn"
nivelProximo = "res://niveis/cordel1/cordel1-nivel3/nivel3.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 2 )]
visible = false
nivelRestart = "res://niveis/cordel1/cordel1-nivel2/nivel2.tscn"
voltaMenu = "res://menu/menu.tscn"

[node name="jogador" parent="." instance=ExtResource( 1 )]
position = Vector2( 131, 96 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 210.0
margin_top = 19.0
margin_right = 339.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Clique aqui ->"

[connection signal="pressed" from="cartas/carta1" to="cartas" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta2" to="cartas" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta2" to="instrucoes" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta3" to="cartas" method="_on_carta3_pressed"]
[connection signal="pressed" from="cartas/carta3" to="instrucoes" method="_on_carta3_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="cartas" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_olho" to="." method="_on_botao_olho_pressed"]
[connection signal="body_entered" from="pisos/piso_centro" to="." method="_on_piso_centro_body_entered"]
[connection signal="body_exited" from="pisos/piso_centro" to="." method="_on_piso_centro_body_exited"]
[connection signal="body_entered" from="pisos/piso_direita" to="." method="_on_piso_direita_body_entered"]
